<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rtweel</string>
    <string name="tweet_button">Tweets</string>
    <string name="hint_name">Name</string>
    <string name="hint_text">Text</string>
    <string name="hint_location">Location</string>
    <string name="make_photo">Make Photo</string>
    <string name="tweet_hint">Input tweet here</string>
    <string name="tweet_send_open">New tweet</string>
    <string name="tweet_send_ok">Send</string>
    <string name="tweet_send_back">Back</string>
    <string name="tweet_send_hint">Input text of your new tweet here</string>
    <string name="tweet_send_add_photo_button">Add photo</string>
    <string name="select_file">Select file</string>
    <string name="loading">Loading..</string>
    <string name="tweet_refreshing">Tweet refreshing..</string>
    <string name="authorization">Authorization..</string>
    <string name="bad_connection_message">No network connection, application requires it for normal functionality</string>
    <string name="new_tweets">New tweets:</string>
    <string name="unloaded_tweets">\n There are unloaded new tweets, you can make up swipe one more time</string>
    <string name="tweet_send_success">Tweet successfully sent</string>
    <string name="tweet_send_failed">Tweet sending failed</string>
    <string name="tweet_send_image_failed">Image capturing failed</string>
    <string name="send_tweet_image_capture_no_camera">No camera apps are present on the phone, can\'t take a photo</string>
    <string name="tweet_send_network_problems">Network problems</string>
    <string name="tweet_send_empty">Tweet must contain some symbols, can\'t be empty</string>
    <string name="tweet_send_too_long">Tweet is too long</string>
    <string name="file_current_dir">"Current Dir: "</string>
    <string name="file_folder">Folder</string>
    <string name="file_size">"File Size: "</string>
    <string name="file_parent_directory">Parent Directory</string>
    <string name="detail_image_pager_title">Image #</string>
    <string name="login_dialog_try_again">Try again</string>
    <string name="login_dialog_message">There was a problem with browser auth, press \'Try again\' button to login via Rtweel internal browser</string>
    <string name="network_problems">Network problems</string>




    <!-- Empty Messages-->
    <string name="tweet_empty_message">There are actually no tweets here</string>
    <string name="direct_empty_message">Haven\'t seen any new messages</string>
    <string name="followers_empty_message">Has no followers</string>
    <string name="trend_empty_message">No trends available for your location</string>


    <!--detail-->
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_message">"Are you sure you want to delete this tweet?"</string>

        <!--settings-->
    <string name="pref_images_shown">Images preview \n In timeline</string>
    <string name="pref_save_tweet">Tweet text saving \n Even after app closing or screen changing</string>
    <string name="pref_pn_enabled">Enable push notifications</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout">Log out</string>
    <string name="pn">Push Notifications</string>
    <string name="radio_15m">15m</string>
    <string name="radio_30m">30m</string>
    <string name="radio_1h">1h</string>
    <string name="radio_2h">2h</string>
    <string name="radio_4h">4h</string>
    <string name="pn_interval">Select push notifications interval</string>



    <!--content descriptions-->
    <string name="cd_retweet_btn">Retweet button</string>
    <string name="cd_fav_btn">Favorite button</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_closed">Closed drawer</string>
    <string name="cd_profile_background">Profile background image</string>
    <string name="cd_profile_picture">Profile picture</string>
    <string name="cd_photo">Photo</string>
    <string name="cd_authors_picture">Author\'s picture</string>
    <string name="cd_tweet_media">Media</string>
    <string name="cd_detail_share">Share</string>
    <string name="cd_detail_reply">Reply</string>
    <string name="cd_detail_delete">Delete</string>
    <string name="cd_nav_item">Navigation item</string>

    <!--nav drawer-->
    <string-array name="drawer_items">
        <item name="profile">Profile</item>
        <item name="timeline">Timeline</item>
        <item name="send_tweet">Send Tweet</item>
        <item name="messages">Messages</item>
        <item name="trends">Trends</item>
        <item name="settings">Settings</item>
    </string-array>

    <string name="change_last_tweet">Change last tweet</string>
    <string name="goToProfile_hint">Input profile name</string>


    <!--Toolbar titles-->
    <string name="title_home">Home</string>
    <string name="title_file">Select File</string>
    <string name="title_login">Login</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_send_tweet">Send Tweet</string>
    <string name="title_followers">Followers</string>
    <string name="title_messages">Direct Messages</string>
    <string name="title_trends">Trends</string>
    <string name="title_tag">HashTag</string>

    <!--Pager titles-->
    <string name="timeline_user">User</string>
    <string name="timeline_answers">Answers</string>
    <string name="timeline_favorite">Favorites</string>
    <string name="timeline_images">Images</string>
    <string name="followers">Followers</string>

    <!-- PN -->
    <string name="pn_mention_title">New mention</string>
    <string name="pn_dmessage_title">New message</string>
    <string name="pn_new_message">Tweets downloaded: </string>
    <string name="pn_new_title">Timeline update</string>
</resources>