<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailActivity" >

	<EditText 
	    android:id="@+id/edit_name"
	    android:hint="@string/hint_name"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:inputType="textPersonName"
	    />
	
	<EditText 
	    android:id="@+id/edit_text"
	    android:hint="@string/hint_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:inputType="textMultiLine"
	    />
	
	<EditText 
	    android:id="@+id/edit_location"
	    android:hint="@string/hint_location"
	   	android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:inputType="textShortMessage"
	    />
	
	  <ImageView 
        android:id="@+id/edit_photo_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/cd_photo"
        />
    
     <Button
        android:id="@+id/edit_make_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_photo" />
    
</LinearLayout>
