<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/scroll_detail_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    android:scrollbars="vertical">


    <RelativeLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".DetailActivity">

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textSize="18sp"
            android:textStyle="italic"
            android:text="Some author name here"/>

        <TextView
            android:id="@+id/detail_date"
            android:layout_width="100dp"
            android:layout_height="58dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="03/10/2010 \n10:55"/>

        <TextView
            android:id="@+id/detail_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/detail_date"
            android:layout_alignRight="@+id/detail_date"
            android:layout_below="@+id/detail_date"
            android:layout_marginTop="24dp"
            android:autoLink="web"
            android:gravity="fill_horizontal"
            android:orientation="horizontal"
            android:textColor="#008080"
            android:textSize="18sp"
            android:text="Some 140 symbols text here right now appearing immediately on my screen for some strange tests after READY! STEADY! GO! still need some more"/>

        <ImageButton
            android:id="@+id/detail_retweet_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/detail_text"
            android:layout_marginTop="26dp"
            android:contentDescription="@string/cd_retweet_btn"
            android:src="@drawable/retweet"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/detail_retweet_count"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_retweet_button"
            android:gravity="center"/>

        <ImageButton
            android:id="@+id/detail_favorited_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/cd_fav_btn"
            android:src="@drawable/favor"
            android:scaleType="fitXY"
            android:layout_alignTop="@+id/detail_retweet_button"
            android:layout_toRightOf="@+id/detail_retweet_button"
            android:layout_toEndOf="@+id/detail_retweet_button" />

        <TextView
            android:id="@+id/detail_favorited_count"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_retweet_button"
            android:layout_alignTop="@+id/detail_retweet_count"
            android:layout_toRightOf="@+id/detail_retweet_button"
            android:layout_toEndOf="@+id/detail_retweet_button"
            android:gravity="center"/>

        <ImageButton
            android:id="@+id/detail_share_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@android:drawable/ic_menu_share"
            android:contentDescription="@string/cd_detail_share"
            android:scaleType="fitXY"
            android:layout_alignTop="@+id/detail_favorited_button"
            android:layout_toRightOf="@+id/detail_favorited_button"
            android:layout_toEndOf="@+id/detail_favorited_button" />

        <ImageButton
            android:id="@+id/detail_reply_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/reply"
            android:contentDescription="@string/cd_detail_reply"
            android:scaleType="fitXY"
            android:layout_alignTop="@+id/detail_share_button"
            android:layout_toRightOf="@+id/detail_share_button"
            android:layout_toEndOf="@+id/detail_share_button"/>

        <ImageButton
            android:id="@+id/detail_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/delete"
            android:contentDescription="@string/cd_detail_delete"
            android:scaleType="fitXY"
            android:layout_alignTop="@+id/detail_reply_button"
            android:layout_toRightOf="@+id/detail_reply_button"
            android:layout_toEndOf="@+id/detail_reply_button" />


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/detail_profile_picture"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/detail_name"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/cd_profile_picture" />
    </RelativeLayout>

</ScrollView>